# MoreThanHuman

./: .env.example  .gitignore  README.md  requirements.txt
.claude/commands/: commit.md
backend/: README.md  config.py  database.py  main.py  pyproject.toml
backend/domains/conversation/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/domains/grammar/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/domains/llm/: __init__.py  factory.py  models.py  ollama.py  openrouter.py  provider.py
backend/domains/search/: __init__.py  router.py  schemas.py  service.py
backend/domains/web/: router.py
backend/domains/web/templates/: base.html  chat.html  conversation_list.html  grammar_stats.html  landing.html
backend/shared/: __init__.py  exceptions.py  types.py  utils.py
docs/: DSL.md
static/css/: custom.css
static/js/: chat.js  theme.js  voice.js
