[project]
name = "morethanhuman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "jinja2==3.1.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
]
